[tool.poetry]
name = "py-geocoder"
version = "0.1.1"
description = ""
authors = ["이광호 <leekh4232@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
py-geocoder = "py_geocoder.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
tqdm = "^4.66.4"
pandas = "^2.2.2"
openpyxl = "^3.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
